# web-transaction-monitor

./: .dockerignore  .env.example  .gitignore  CLEANUP_README.md  DEVELOPMENT.md  Dockerfile  GITHUB_SETUP.md  LICENSE  Makefile  PROCESS_FIXES.md  README.md  cleanup_processes.sh  cleanup_screenshots.py  docker-compose.yml  entrypoint.sh  main.py  monitor_base.py  prometheus.yml  pyproject.toml  record_test.py  run_test.py
.github/: copilot-instructions.md
grafana/provisioning/dashboards/: dashboard.yml  executive_dashboard.json  step_timing_dashboard.json  transaction_dashboard.json
grafana/provisioning/datasources/: datasource.yml
runners/: python_runner.py
screenshots/: .gitkeep
tests/: conftest.py  test_monitor_base.py  test_python_runner.py
transactions/hidrive-legacy/: document_test.py  picture_test.py  settings_test.py
transactions/hidrive-next/: document_test.py  picture_test.py  settings_test.py
transactions/ionos-managed-nextcloud/: document_test.py  picture_test.py  settings_test.py
transactions/ionos-nextcloud-workspace/: document_test.py  picture_test.py  settings_test.py
transactions/magentacloud/: document_test.py  picture_test.py  settings_test.py
transactions/storage.ionos.fr/: picture_test.py
transactions/workspace.kallisto45.de/: picture_test.py
